# sider

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md
src/: cli.rs  errors.rs  lib.rs  main.rs
