[package]
name = "sylvanas"
version = "0.1.0"
edition = "2021"
author = ["JeffXun <452914639@qq.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
description = "A redis-client TUI project written by Rust"
keywords = ["tui", "terminal", "redis", "client"]
repository = "https://github.com/kaixinbaba/sylvanas"
homepage = "https://github.com/kaixinbaba/sylvanas"

[[bin]]
name = "sylvanas"
path = "src/main.rs"

[dependencies]
tui = "0.17.0"
crossterm = "0.22"

clap = {version = "3.1.6", features = ["derive"]}
anyhow = "1.0"
thiserror = "1.0"
serde = {version = "1.0", features = ["derive"]}
redis = {version = "0.21.5", features = ["tokio-comp"]}
tokio = {version = "1.17.0", features = ["full"]}



